# WebDesk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  head.h
src/MySQL/: DirectoryForest.h  DirectoryForestDao.cpp  DirectoryForestDao.h  User.h  UserDao.cpp  UserDao.h
src/TcpClient/: CClient.cpp  CClient.h  CCommand.cpp  CCommand.h  CMakeLists.txt  Client.cpp
src/TcpServer/: CMakeLists.txt  SCommand.cpp  SCommand.h  SServer.cpp  SServer.h  Server.cpp
test/: CMakeLists.txt  TestUtils.cpp  public.h
thirdpart/: json.hpp
utils/: Config.cpp  Config.h  ConnectionPool.cpp  ConnectionPool.h  Log.cpp  Log.h  MD5.cpp  MD5.h  MysqlConn.cpp  MysqlConn.h  SHA256.cpp  SHA256.h  Singleton.h  public.cpp  public.h
